fix:  Improve swagger docs
