# internal/dto/error.go
@@ -1,0 +1,6 @@
+package dto
+
+// ErrorResponse defines a standard error response.
+type ErrorResponse struct {
+	Error string `json:"error" example:"invalid request"`
+}
